--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>SNJ Portfolio</title>
     </head>
 <body>
-    
+    <header>
+        <h1>Satalia N. Jefferson</h1>
+        <nav>
+            <ul>
+                <li>
+                    About Me
+                </li>
+                <li>
+                    My Work
+                </li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
