added css, images folder, aadded favicon, added more html

--- a/index.html
+++ b/index.html
@@ -1,24 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="shortcut icon" type="image/png" href="images/snj_favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNJ Portfolio</title>
-    </head>
+</head>
 <body>
     <header>
-        <h1>Satalia N. Jefferson</h1>
+        <h1>
+            <a href="#">Satalia N. Jefferson</a>
+        </h1>
         <nav>
             <ul>
                 <li>
-                    About Me
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    My Work
+                    <a href="#my-work">My Work</a>
                 </li>
-                <li>Contact</li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
             </ul>
         </nav>
     </header>
+    <section class="hero">
+        <div class="profile-pic">
+            <img src="#" alt="picture of me"/>
+        </div>
+    </section>
+    <section id="about-me">
+        <h2>About Me</h2>
+    </section>
+    <section id="my-work">
+        <h2>My Work</h2>
+    </section>
+    <section id="contact-me">
+        <h2>Contact Me</h2>
+    </section>
+    <footer>
+        <h4>
+            Made by Satalia Jefferson
+        </h4>
+        <div>
+            &copy; 2020 Essennejaye Designs            
+        </div>
+    </footer>
 </body>
 </html>
