--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./assets/css/style.css"/>
-    <link rel="shortcut icon" type="image/png" href="images/snj_favicon.png">
+    <link rel="shortcut icon" type="image/png" href="./assets/images/snj_favicon.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNJ Portfolio</title>
@@ -28,17 +28,48 @@
     </header>
     <section class="hero">
         <div class="profile-pic">
-            <img src="#" alt="picture of me"/>
+            <img src="./assets/images/20200505_134131 (2).jpg" alt="picture of me"/>
+        </div>
+        <div class="quote">
+            <p>
+                <q>
+                    Not everything that is faced can be changed,<br> but nothing can be changd until it is faced.
+                </q>
+                James Baldwin
+            </p>
         </div>
     </section>
     <section id="about-me">
+        <div class="section-title">
         <h2>About Me</h2>
+        </div>
+        <article class="brand-statement">        
+        <p> I am web developer with a background in healthcare. I am able to combine critical thinking skills, effective team communication and attention to detail to develop full stack user friendly web applications.
+        </p>
+    </article>
     </section>
     <section id="my-work">
+        <div class="section-title">
         <h2>My Work</h2>
-    </section>
+        </div>
+        <div class="project-screenshots">
+            <img src="./assets/images/run_buddy.png" alt="run buddy screenshot"/>
+            <img src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"/>
+            <img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"/>
+            </div>
+        </section>
+
     <section id="contact-me">
+        <div class="section-title">
         <h2>Contact Me</h2>
+        </div>
+        <div class="contact-info">
+            <p>
+                Email: <a href="mailto:sjeffers02@gmail.com">sjeffers02@gmail.com</a>
+                <a href="http://www.linkedin.com/in/satalia-n-jefferson-87037a114"><img src="./assets/images/linkedin-icon.png" alt="linkedin icon"/></a>
+                <a href="https://github.com/essennejaye"><img src="./assets/images/GitHub_Logo_White.png" alt="github logo"/></a>                            
+            </p>
+        </div>
     </section>
     <footer>
         <h4>
