background, header, html and style

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
-    <link rel="shortcut icon" type="image/png" href="./assets/images/snj_favicon.png"/>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="shortcut icon" type="image/png" href="./assets/images/snj_favicon.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNJ Portfolio</title>
 </head>
-<body>
+
+<body class="background-image">
+
     <header>
         <h1>
             <a href="#">Satalia N. Jefferson</a>
@@ -28,47 +31,59 @@
     </header>
     <section class="hero">
         <div class="profile-pic">
-            <img src="./assets/images/20200505_134131 (2).jpg" alt="picture of me"/>
+            <img src="./assets/images/20200505_134131 (2).jpg" alt="picture of me" />
         </div>
         <div class="quote">
             <p>
                 <q>
-                    Not everything that is faced can be changed,<br> but nothing can be changd until it is faced.
-                </q>
+                    Not everything that is faced can be changed,<br> but nothing can be changed until it is faced.
+                </q><br>
                 James Baldwin
             </p>
         </div>
     </section>
-    <section id="about-me">
-        <div class="section-title">
-        <h2>About Me</h2>
-        </div>
-        <article class="brand-statement">        
-        <p> I am web developer with a background in healthcare. I am able to combine critical thinking skills, effective team communication and attention to detail to develop full stack user friendly web applications.
-        </p>
-    </article>
-    </section>
-    <section id="my-work">
-        <div class="section-title">
-        <h2>My Work</h2>
-        </div>
-        <div class="project-screenshots">
-            <img src="./assets/images/run_buddy.png" alt="run buddy screenshot"/>
-            <img src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"/>
-            <img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"/>
-            </div>
-        </section>
-
-    <section id="contact-me">
-        <div class="section-title">
-        <h2>Contact Me</h2>
-        </div>
-        <div class="contact-info">
-            <p>
-                Email: <a href="mailto:sjeffers02@gmail.com">sjeffers02@gmail.com</a>
-                <a href="http://www.linkedin.com/in/satalia-n-jefferson-87037a114"><img src="./assets/images/linkedin-icon.png" alt="linkedin icon"/></a>
-                <a href="https://github.com/essennejaye"><img src="./assets/images/GitHub_Logo_White.png" alt="github logo"/></a>                            
+    <section class="about-me">
+        <h2 class="section-title">About<br> Me</h2>
+        <div class="brand-statement">
+            <p> I am an always evolving web developer with a background in healthcare that allows me to combine critical
+                thinking skills,
+                effective team communication, attention to detail and an ability to remain calm under pressure.
+                Recently, I earned a Master of Science in Information Systems from Dakota State University and a
+                certificate for full stack development from the University of Arizona.
+                I am excited about the opportunity to venture outside of the usual expectations to help craft memorable,
+                lasting and responsive user friendly web applications. applications.
             </p>
+        </div>
+    </section>
+    <section class="my-work">
+        <h2 class="section-title">My<br>Work</h2>
+        <div class="screenshot-grid">
+            <div class="screenshot project-1">
+                <a href="https://essennejaye.github.io/run-buddy/"><img src="./assets/images/run_buddy.png"
+                        alt="run buddy screenshot"></a>
+            </div>
+            <div class="screenshot project-2">
+                <a href="https://essennejaye.github.io/horiseon-code-refactor/"><img
+                        src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"></a>
+            </div>
+            <div class="screenshot project-3">
+                <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"></a>
+            </div>
+        </div>
+        
+    </section>
+
+    <section class="contact-me">
+        <h2 class="section-title">Contact Me</h2>
+        </div>
+        <div class="contact-info"></div>
+        <p>
+            Email: <a href="mailto:sjeffers02@gmail.com">sjeffers02@gmail.com</a>
+            <a href="http://www.linkedin.com/in/satalia-n-jefferson-87037a114"><img
+                    src="./assets/images/linkedin-icon.png" alt="linkedin icon" /></a>
+            <a href="https://github.com/essennejaye"><img src="./assets/images/GitHub_Logo_White.png"
+                    alt="github logo" /></a>
+        </p>
         </div>
     </section>
     <footer>
@@ -76,8 +91,9 @@
             Made by Satalia Jefferson
         </h4>
         <div>
-            &copy; 2020 Essennejaye Designs            
+            &copy; 2020 Essennejaye Designs
         </div>
     </footer>
 </body>
+
 </html>
