continued styling my work section

--- a/index.html
+++ b/index.html
@@ -57,21 +57,47 @@
     </section>
     <section class="my-work">
         <h2 class="section-title">My<br>Work</h2>
-        <div class="screenshot-grid">
+
+        <ul class="flex-list">
+            <li>
+                <a href="https://essennejaye.github.io/run-buddy/"><img src="./assets/images/run_buddy.png"
+                    alt="run buddy screenshot" class="project-img"></a>
+                <p class="image-text-1">
+                    HTML, CSS   Run Buddy -  fitness app
+                </p>
+            </li>
+            <li>
+                <a href="https://essennejaye.github.io/horiseon-code-refactor/"><img
+                    src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"
+                    class="project-img"></a>
+                    <p class="image-text-2">
+                        HTML, CSS   Horiseon - marketing webpage
+                    </p>
+    
+            </li>
+            <li>
+                <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"
+                    class="project-img"></a>
+            </li>
+        </ul>
+
+        <!-- <div class="screenshot-grid">
             <div class="screenshot project-1">
                 <a href="https://essennejaye.github.io/run-buddy/"><img src="./assets/images/run_buddy.png"
-                        alt="run buddy screenshot"></a>
+                        alt="run buddy screenshot" class="project-img"></a>
             </div>
             <div class="screenshot project-2">
                 <a href="https://essennejaye.github.io/horiseon-code-refactor/"><img
-                        src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"></a>
+                        src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"
+                        class="project-img"></a>
             </div>
             <div class="screenshot project-3">
-                <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"></a>
+                <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"
+                        class="project-img"></a>
             </div>
-        </div>
-        
-    </section>
+        </div>-->
+
+    </section> 
 
     <section class="contact-me">
         <h2 class="section-title">Contact Me</h2>
