basic page html and style

--- a/index.html
+++ b/index.html
@@ -58,62 +58,47 @@
     <section class="my-work">
         <h2 class="section-title">My<br>Work</h2>
 
-        <ul class="flex-list">
-            <li>
+        <div class="flex-container">
+            <div class="flex-item1 project-img">
                 <a href="https://essennejaye.github.io/run-buddy/"><img src="./assets/images/run_buddy.png"
-                    alt="run buddy screenshot" class="project-img"></a>
-                <p class="image-text-1">
-                    HTML, CSS   Run Buddy -  fitness app
-                </p>
-            </li>
-            <li>
+                        alt="run buddy screenshot"></a>
+            </div>
+            <div class="flex-item2 project-img">
                 <a href="https://essennejaye.github.io/horiseon-code-refactor/"><img
-                    src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"
-                    class="project-img"></a>
-                    <p class="image-text-2">
-                        HTML, CSS   Horiseon - marketing webpage
-                    </p>
-    
-            </li>
-            <li>
-                <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"
-                    class="project-img"></a>
-            </li>
-        </ul>
+                        src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"></a>
+            </div>
+            <div class="flex-item3 project-img">
+                <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"></a>
+            </div>
+        </div>
 
-        <!-- <div class="screenshot-grid">
-            <div class="screenshot project-1">
-                <a href="https://essennejaye.github.io/run-buddy/"><img src="./assets/images/run_buddy.png"
-                        alt="run buddy screenshot" class="project-img"></a>
-            </div>
-            <div class="screenshot project-2">
-                <a href="https://essennejaye.github.io/horiseon-code-refactor/"><img
-                        src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"
-                        class="project-img"></a>
-            </div>
-            <div class="screenshot project-3">
-                <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"
-                        class="project-img"></a>
-            </div>
-        </div>-->
-
-    </section> 
+    </section>
 
     <section class="contact-me">
-        <h2 class="section-title">Contact Me</h2>
-        </div>
-        <div class="contact-info"></div>
-        <p>
-            Email: <a href="mailto:sjeffers02@gmail.com">sjeffers02@gmail.com</a>
-            <a href="http://www.linkedin.com/in/satalia-n-jefferson-87037a114"><img
-                    src="./assets/images/linkedin-icon.png" alt="linkedin icon" /></a>
-            <a href="https://github.com/essennejaye"><img src="./assets/images/GitHub_Logo_White.png"
-                    alt="github logo" /></a>
-        </p>
+        <h2 class="section-title">Contact<br> Me</h2>
+        <div class="contact-container">
+            <div class="flex-item-1 e-mail">
+                <p>
+                    E: <a href="mailto:sjeffers02@gmail.com">sjeffers02@gmail.com</a>
+                </p>
+            </div>
+            <div class="flex-item-3 phone-number">
+                <p>
+                    P: 443-985-6501
+                </p>
+            </div>
+            <div class="flex-item-3 linkedin-link">
+                <a href="http://www.linkedin.com/in/satalia-n-jefferson-87037a114"><img
+                        src="./assets/images/linkedin-icon.png" alt="linkedin icon" /></a>
+            </div>
+            <div class="flex-item-4 github-link">
+                <a href="https://github.com/essennejaye"><img src="./assets/images/GitHub_Logo_White.png"
+                        alt="github logo" /></a>
+            </div>
         </div>
     </section>
     <footer>
-        <h4>
+        <h3>
             Made by Satalia Jefferson
         </h4>
         <div>
