added link highlights and changed social media icons

--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
     <section class="contact-me">
         <h2 class="section-title">Contact<br> Me</h2>
         <div class="contact-container">
-            <div class="flex-item-1 e-mail">
+            <div class="flex-item e-mail">
                 <p>
                     E: <a href="mailto:sjeffers02@gmail.com">sjeffers02@gmail.com</a>
                 </p>
             </div>
-            <div class="flex-item-3 phone-number">
+            <div class="flex-item phone-number">
                 <p>
                     P: 443-985-6501
                 </p>
             </div>
-            <div class="flex-item-3 linkedin-link">
+            <div class="flex-item linkedin-link">
                 <a href="http://www.linkedin.com/in/satalia-n-jefferson-87037a114"><img
-                        src="./assets/images/linkedin-icon.png" alt="linkedin icon" /></a>
+                        src="./assets/images/linkedin-5-512.png" alt="linkedin icon" /></a>
             </div>
-            <div class="flex-item-4 github-link">
-                <a href="https://github.com/essennejaye"><img src="./assets/images/GitHub_Logo_White.png"
+            <div class="flex-item github-link">
+                <a href="https://github.com/essennejaye"><img src="./assets/images/iconfinder_github_287725.png"
                         alt="github logo" /></a>
             </div>
         </div>
