added text box descriptions to project images

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </p>
         </div>
     </section>
-    <section class="about-me">
+    <section class="about-me-container" id="about-me">
         <h2 class="section-title">About<br> Me</h2>
         <div class="brand-statement">
             <p> I am an always evolving web developer with a background in healthcare that allows me to combine critical
@@ -55,26 +55,39 @@
             </p>
         </div>
     </section>
-    <section class="my-work">
+    <section class="my-work-container" id="my-work">
         <h2 class="section-title">My<br>Work</h2>
-
         <div class="flex-container">
             <div class="flex-item1 project-img">
                 <a href="https://essennejaye.github.io/run-buddy/"><img src="./assets/images/run_buddy.png"
                         alt="run buddy screenshot"></a>
+                <div class="text-block">
+                    <h4>Run Buddy</h4>
+                    <p>HTML, CSS</p>
+                </div>
             </div>
             <div class="flex-item2 project-img">
                 <a href="https://essennejaye.github.io/horiseon-code-refactor/"><img
                         src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"></a>
+                <div class="text-block">
+                    <h4>Horiseon</h4>
+                    <p>HTML, CSS</p>
+                </div>
+        
             </div>
             <div class="flex-item3 project-img">
                 <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"></a>
+                <div class="text-block">
+                    <h4>Fangirl Tribute</h4>
+                    <p>HTML</p>
+                </div>
+
             </div>
         </div>
 
     </section>
 
-    <section class="contact-me">
+    <section class="contact-me-container" id="contact-me">
         <h2 class="section-title">Contact<br> Me</h2>
         <div class="contact-container">
             <div class="flex-item e-mail">
