eliminating white space

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <h2 class="section-title">About<br> Me</h2>
         <div class="brand-statement">
             <p> I am an always evolving web developer with a background in healthcare that allows me to combine critical
-                thinking skills,
-                effective team communication, attention to detail and an ability to remain calm under pressure.
+                thinking skills, effective team communication, attention to detail and an ability to remain calm under pressure.
                 Recently, I earned a Master of Science in Information Systems from Dakota State University and a
                 certificate for full stack development from the University of Arizona.
                 I am excited about the opportunity to venture outside of the usual expectations to help craft memorable,
