media query optimization

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <h2 class="section-title">About<br> Me</h2>
         <div class="brand-statement">
             <p> I am an always evolving web developer with a background in healthcare that allows me to combine critical
-                thinking skills, effective team communication, attention to detail and an ability to remain calm under pressure.
+                thinking skills, effective team communication, attention to detail and an ability to remain calm under
+                pressure.
                 Recently, I earned a Master of Science in Information Systems from Dakota State University and a
                 certificate for full stack development from the University of Arizona.
                 I am excited about the opportunity to venture outside of the usual expectations to help craft memorable,
@@ -72,7 +73,7 @@
                     <h4>Horiseon</h4>
                     <p>HTML, CSS</p>
                 </div>
-        
+
             </div>
             <div class="flex-item3 project-img">
                 <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"></a>
@@ -90,9 +91,7 @@
         <h2 class="section-title">Contact<br> Me</h2>
         <div class="contact-container">
             <div class="flex-item e-mail">
-                <p>
-                    E: <a href="mailto:sjeffers02@gmail.com">sjeffers02@gmail.com</a>
-                </p>
+                  <a href="mailto:sjeffers02@gmail.com">E: sjeffers02@gmail.com</a>
             </div>
             <div class="flex-item phone-number">
                 <p>
@@ -110,12 +109,12 @@
         </div>
     </section>
     <footer>
-        <h3>
+        <h4>
             Made by Satalia Jefferson
-            </h4>
-            <div>
-                &copy; 2020 Essennejaye Designs
-            </div>
+        </h4>
+        <div>
+            &copy; 2020 Essennejaye Designs
+        </div>
     </footer>
 </body>
 
