media queries complete, code cleanup complete

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>SNJ Portfolio</title>
 </head>
 
+<!-- to add a full page background-->
 <body class="background-image">
-
+    <!-- header and navigation -->
     <header>
         <h1>
             <a href="#">Satalia N. Jefferson</a>
@@ -29,6 +30,7 @@
             </ul>
         </nav>
     </header>
+    <!-- profile picture and inspiring quote -->
     <section class="hero">
         <div class="profile-pic">
             <img src="./assets/images/20200505_134131 (2).jpg" alt="picture of me" />
@@ -42,9 +44,10 @@
             </p>
         </div>
     </section>
-    <section class="about-me-container" id="about-me">
+    <!-- bio section -->
+    <section class="section-container" id="about-me">
         <h2 class="section-title">About<br> Me</h2>
-        <div class="brand-statement">
+        <div class="about-container">
             <p> I am an always evolving web developer with a background in healthcare that allows me to combine critical
                 thinking skills, effective team communication, attention to detail and an ability to remain calm under
                 pressure.
@@ -55,43 +58,41 @@
             </p>
         </div>
     </section>
-    <section class="my-work-container" id="my-work">
+    <!-- project screenshots with name and tech implemented -->
+    <section class="section-container" id="my-work">
         <h2 class="section-title">My<br>Work</h2>
-        <div class="flex-container">
-            <div class="flex-item1 project-img">
-                <a href="https://essennejaye.github.io/run-buddy/"><img src="./assets/images/run_buddy.png"
+        <div class="project-container">
+            <div id="image-1" class="project-img">
+                <a href="https://essennejaye.github.io/run-buddy/" target="_blank"><img src="./assets/images/run_buddy.png"
                         alt="run buddy screenshot"></a>
                 <div class="text-block">
                     <h4>Run Buddy</h4>
                     <p>HTML, CSS</p>
                 </div>
             </div>
-            <div class="flex-item2 project-img">
-                <a href="https://essennejaye.github.io/horiseon-code-refactor/"><img
+            <div class="project-img">
+                <a href="https://essennejaye.github.io/horiseon-code-refactor/" target="_blank"><img
                         src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"></a>
                 <div class="text-block">
                     <h4>Horiseon</h4>
                     <p>HTML, CSS</p>
                 </div>
-
             </div>
-            <div class="flex-item3 project-img">
-                <a href="#"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"></a>
+            <div class="project-img">
+                <a href="#" target="_blank"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"></a>
                 <div class="text-block">
                     <h4>Fangirl Tribute</h4>
                     <p>HTML</p>
                 </div>
-
             </div>
         </div>
-
     </section>
-
-    <section class="contact-me-container" id="contact-me">
+    <!-- contact info and links to linkedin and github -->
+    <section class="section-container" id="contact-me">
         <h2 class="section-title">Contact<br> Me</h2>
         <div class="contact-container">
             <div class="flex-item e-mail">
-                  <a href="mailto:sjeffers02@gmail.com">E: sjeffers02@gmail.com</a>
+                <a href="mailto:sjeffers02@gmail.com/" target="_blank">E: sjeffers02@gmail.com</a>
             </div>
             <div class="flex-item phone-number">
                 <p>
@@ -99,15 +100,16 @@
                 </p>
             </div>
             <div class="flex-item linkedin-link">
-                <a href="http://www.linkedin.com/in/satalia-n-jefferson-87037a114"><img
+                <a href="http://www.linkedin.com/in/satalia-n-jefferson-87037a114/" target="_blank"><img
                         src="./assets/images/linkedin-5-512.png" alt="linkedin icon" /></a>
             </div>
             <div class="flex-item github-link">
-                <a href="https://github.com/essennejaye"><img src="./assets/images/iconfinder_github_287725.png"
+                <a href="https://github.com/essennejaye/" target="_blank"><img src="./assets/images/iconfinder_github_287725.png"
                         alt="github logo" /></a>
             </div>
         </div>
     </section>
+    <!-- footer -->
     <footer>
         <h4>
             Made by Satalia Jefferson
