added screenshots and made img file names better

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- profile picture and inspiring quote -->
     <section class="hero">
         <div class="profile-pic">
-            <img src="./assets/images/20200505_134131 (2).jpg" alt="picture of me" />
+            <img src="./assets/images/profile_pic.jpg" alt="picture of me" />
         </div>
         <div class="quote">
             <p>
@@ -101,10 +101,10 @@
             </div>
             <div class="flex-item linkedin-link">
                 <a href="http://www.linkedin.com/in/satalia-n-jefferson-87037a114/" target="_blank"><img
-                        src="./assets/images/linkedin-5-512.png" alt="linkedin icon" /></a>
+                        src="./assets/images/linkedin_icon.png" alt="linkedin icon" /></a>
             </div>
             <div class="flex-item github-link">
-                <a href="https://github.com/essennejaye/" target="_blank"><img src="./assets/images/iconfinder_github_287725.png"
+                <a href="https://github.com/essennejaye/" target="_blank"><img src="./assets/images/github_icon.png"
                         alt="github logo" /></a>
             </div>
         </div>
