removed break from quote, realigned text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="quote">
             <p>
                 <q>
-                    Not everything that is faced can be changed,<br> but nothing can be changed until it is faced.
+                    Not everything that is faced can be changed, but nothing can be changed until it is faced.
                 </q><br>
                 James Baldwin
             </p>
