--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>SNJ Portfolio</title>
 </head>
 <!-- to add a full page background-->
+
 <body class="background-image">
     <!-- header and navigation -->
     <header>
@@ -62,26 +63,27 @@
         <h2 class="section-title">My<br>Work</h2>
         <div class="project-container">
             <div id="image-1" class="project-img">
-                <a href="https://essennejaye.github.io/run-buddy/" target="_blank"><img src="./assets/images/run_buddy.png"
-                        alt="run buddy screenshot"></a>
+                <a href="https://essennejaye.github.io/coder-calender/" target="_blank"><img
+                        src="assets\images\calender_screenshot.png" alt="workday calender screenshot"></a>
                 <div class="text-block">
-                    <h4>Run Buddy</h4>
-                    <p>HTML, CSS</p>
+                    <h4>Work Day SCheduler</h4>
+                    <p>HTML, CSS, Javascript</p>
                 </div>
             </div>
-            <div class="project-img">
-                <a href="https://essennejaye.github.io/horiseon-code-refactor/" target="_blank"><img
-                        src="./assets/images/horiseon_screen_capture.png" alt="horiseon screenshot"></a>
+            <div id="image-2" class="project-img">
+                <a href="https://essennejaye.github.io/city-forecast//" target="_blank"><img
+                        src="assets\images\forecast_screenshot.png" alt="weather forecast"></a>
                 <div class="text-block">
-                    <h4>Horiseon</h4>
-                    <p>HTML, CSS</p>
+                    <h4>Weather Dashboard</h4>
+                    <p>HTML, CSS, Javascript<br>JQuery</p>
                 </div>
             </div>
-            <div class="project-img">
-                <a href="#" target="_blank"><img src="./assets/images/fangirl_EWF.png" alt="EW&F fangirl screenshot"></a>
+            <div id="image-3" class="project-img">
+                <a href="https://essennejaye.github.io/rv-roadtrip/" target="_blank"><img
+                        src="assets\images\rv_screenshot.png" alt="RV Roadtrip screenshot" /></a>
                 <div class="text-block">
-                    <h4>Fangirl Tribute</h4>
-                    <p>HTML</p>
+                    <h4>RV Roadtrip</h4>
+                    <p>Group Project<br>HTML, CSS, Javascript<br>JQuery, Bulma</p>
                 </div>
             </div>
         </div>
