--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Recently, I earned a Master of Science in Information Systems from Dakota State University and a
                 certificate for full stack development from the University of Arizona.
                 I am excited about the opportunity to venture outside of the usual expectations to help craft memorable,
-                lasting and responsive user friendly web applications. applications.
+                lasting and responsive user friendly web applications. 
             </p>
         </div>
     </section>
