--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="https://essennejaye.github.io/coder-calender/" target="_blank"><img
                         src="assets\images\calender_screenshot.png" alt="workday calender screenshot"></a>
                 <div class="text-block">
-                    <h4>Work Day SCheduler</h4>
+                    <h4>Work Day Scheduler</h4>
                     <p>HTML, CSS, Javascript</p>
                 </div>
             </div>
