--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         src="assets\images\calender_screenshot.png" alt="workday calender screenshot"></a>
                 <div class="text-block">
                     <h4>Work Day Scheduler</h4>
-                    <p>HTML, CSS, Javascript</p>
+                    <p>HTML, CSS, Javascript<br>Bootstrap, Moment.js</p>
                 </div>
             </div>
             <div id="image-2" class="project-img">
@@ -75,7 +75,7 @@
                         src="assets\images\forecast_screenshot.png" alt="weather forecast"></a>
                 <div class="text-block">
                     <h4>Weather Dashboard</h4>
-                    <p>HTML, CSS, Javascript<br>JQuery</p>
+                    <p>HTML, CSS, Javascript<br>JQuery, Moment.js</p>
                 </div>
             </div>
             <div id="image-3" class="project-img">
