added latest group project

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <h2 class="section-title">My<br>Work</h2>
         <div class="project-container">
             <div id="image-1" class="project-img">
-                <a href="https://essennejaye.github.io/coder-calender/" target="_blank"><img
-                        src="assets\images\calender_screenshot.png" alt="workday calender screenshot"></a>
+                <a href="https://fathomless-waters-65385.herokuapp.com/" target="_blank"><img
+                        src="assets/images/pro_2_home.png" alt="my schtick kick screenshot"></a>
                 <div class="text-block">
-                    <h4>Work Day Scheduler</h4>
-                    <p>HTML, CSS, Javascript<br>Bootstrap, Moment.js</p>
+                    <h4>My Schtick Kick</h4>
+                    <p>Javascript, Node, Express<br>Sequelize ORM, Express</p>
                 </div>
             </div>
             <div id="image-2" class="project-img">
