added tech used

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         src="assets/images/pro_2_home.png" alt="my schtick kick screenshot"></a>
                 <div class="text-block">
                     <h4>My Schtick Kick</h4>
-                    <p>Javascript, Node, Express<br>Sequelize ORM, Express</p>
+                    <p>Javascript, Node, Express<br>Sequelize ORM, Bootstrap</p>
                 </div>
             </div>
             <div id="image-2" class="project-img">
